# rules_android-process-crash-repro

./: .bazelrc  MODULE.bazel  README.md
app/: AndroidManifest.xml  BUILD.bazel  proguard.cfg
app/res/values/: strings.xml
app/src/com/example/app/: Helper.java  MainActivity.java  MyApp.java
test/: AndroidManifest_lib.xml  AndroidTestManifest.xml  BUILD.bazel
test/src/com/example/test/: MyAppTest.java
