load("@rules_android//rules:rules.bzl", "android_binary", "android_library")

android_library(
    name = "lib",
    srcs = glob(["src/**/*.java"]),
    custom_package = "com.example.app",
    manifest = "AndroidManifest.xml",
    resource_files = glob(["res/**"]),
    visibility = ["//test:__pkg__"],
)

android_binary(
    name = "app",
    custom_package = "com.example.app",
    manifest = "AndroidManifest.xml",
    proguard_specs = ["proguard.cfg"],
    visibility = ["//test:__pkg__"],
    deps = [":lib"],
)
